objects/Operations_Request_Line_Item__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Product_Name__c</fullName>
        <formula>IF(ISBLANK(Product__r.Actual_Product_Name__c), Product__r.Name, Product__r.Actual_Product_Name__c)</formula>
        <label>Actual Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Information__c</fullName>
        <label>Additional Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Measurements__c</fullName>
        <formula>Product__r.Additional_Measurements__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Additional Measurements</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved_Pricing__c</fullName>
        <label>Approved Pricing ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Approved_Pricing_formula__c</fullName>
        <formula>ELC__c /(1- MMU_Approved__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approved Pricing ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Arrival_Date__c</fullName>
        <label>Arrival Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Attribute_Color_Finish__c</fullName>
        <inlineHelpText>Color Code or Description</inlineHelpText>
        <label>Attribute/Color/Finish</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Confirmed_Lead_Time__c</fullName>
        <label>Confirmed Lead Time</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Custom_Specification_Info__c</fullName>
        <inlineHelpText>Info about what needs to be customized</inlineHelpText>
        <label>Custom Specification Info</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Location__c</fullName>
        <label>Customer Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Spec__c</fullName>
        <label>Customer Spec #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Tracking__c</fullName>
        <label>Customer Tracking #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DC_Location__c</fullName>
        <label>DC Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>89 - ODC</fullName>
                </value>
                <value>
                    <fullName>95 - SFDC</fullName>
                </value>
                <value>
                    <fullName>96 - DDC</fullName>
                </value>
                <value>
                    <fullName>97 - LADC</fullName>
                </value>
                <value>
                    <fullName>98 - MDC</fullName>
                </value>
                <value>
                    <fullName>Direct to Customer</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Direct_First_Cost__c</fullName>
        <formula>Product__r.Direct_First_Cost__c</formula>
        <label>Direct First Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <inlineHelpText>What discount are you offering product to the client?</inlineHelpText>
        <label>Discount %</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Do_you_need_a_CAD__c</fullName>
        <label>Do you need a CAD?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dom_Int__c</fullName>
        <inlineHelpText>Domestic - Request to move good outside of HDL Network.
International - Request to move good outside of the existing US or Canada structure.</inlineHelpText>
        <label>Dom/Int</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Domestic</fullName>
                </value>
                <value>
                    <fullName>International</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ELC__c</fullName>
        <label>ELC ($)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Foam_Fill__c</fullName>
        <label>Foam Fill</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>HR</fullName>
                </value>
                <value>
                    <fullName>Reticulated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Freight_Cost_Per_Unit__c</fullName>
        <label>Freight Cost Per Unit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fulfillment_Type__c</fullName>
        <label>Fulfillment Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dropship</fullName>
                </value>
                <value>
                    <fullName>Inventory</fullName>
                </value>
                <value>
                    <fullName>SPO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Indoor_Outdoor__c</fullName>
        <label>Indoor/Outdoor</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Indoor</fullName>
                </value>
                <value>
                    <fullName>Outdoor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_this_a_Custom_Item__c</fullName>
        <label>Is this a Custom Item?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MMU_Approved__c</fullName>
        <label>MMU% Approved</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MOQ__c</fullName>
        <label>MOQ</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <label>Margin %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>New_SKU_Description__c</fullName>
        <formula>New_SKU__r.Actual_Product_Name__c</formula>
        <label>New SKU Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_SKU__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>New SKU</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Operations Request Line Items (New SKU)</relationshipLabel>
        <relationshipName>Operations_Request_Line_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Operations_Request__c</fullName>
        <label>Operations Request</label>
        <referenceTo>Operations_Request__c</referenceTo>
        <relationshipName>Operations_Request_Products</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product_Id__c</fullName>
        <label>Opportunity Product Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Product__c</fullName>
        <formula>IF(ISBLANK(Opportunity_Product_Id__c), null, HYPERLINK(&quot;/&quot; &amp;  Opportunity_Product_Id__c, Product__r.Name, &quot;_self&quot;))</formula>
        <label>Opportunity Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ops_Notes__c</fullName>
        <label>Ops Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PO_DC_Location__c</fullName>
        <label>PO DC Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>89 - ODC</fullName>
                </value>
                <value>
                    <fullName>95 - SFDC</fullName>
                </value>
                <value>
                    <fullName>96 - DDC</fullName>
                </value>
                <value>
                    <fullName>97 - LADC</fullName>
                </value>
                <value>
                    <fullName>98 - MDC</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PO_In_DC_Date__c</fullName>
        <label>PO In DC Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PO_Placed_Date__c</fullName>
        <label>PO Placed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PO__c</fullName>
        <label>PO #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Handover_Date__c</fullName>
        <inlineHelpText>This is the date that the client takes possession of goods - needed to determine lead time.</inlineHelpText>
        <label>Product Handover Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_Information__c</fullName>
        <label>Product Information</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; Product__c, Product__r.Actual_Product_Name__c, &quot;_self&quot;)</formula>
        <label>Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Quantity_On_Hand__c</fullName>
        <formula>Product__r.Total_Quantity_On_Hand__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Quantity On Hand</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Vendor_Name__c</fullName>
        <formula>Product__r.Vendor_Name__c</formula>
        <label>Product Vendor Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Operations Request Line Items</relationshipLabel>
        <relationshipName>Operations_Request_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <inlineHelpText>Product Information Questions</inlineHelpText>
        <label>Question</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Ready_To_Place_Dropship__c</fullName>
        <label>Ready To Place Dropship?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Square_Feet__c</fullName>
        <inlineHelpText>1 Sq Ft leather converts to .1 Yards of fabric</inlineHelpText>
        <label>Square Feet</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>COI</fullName>
                </value>
                <value>
                    <fullName>Large Qty SPO</fullName>
                </value>
                <value>
                    <fullName>Core Inventory</fullName>
                </value>
                <value>
                    <fullName>Core Margin</fullName>
                </value>
                <value>
                    <fullName>Discount</fullName>
                </value>
                <value>
                    <fullName>Permission to Exceed Guidelines</fullName>
                </value>
                <value>
                    <fullName>Lead Time</fullName>
                </value>
                <value>
                    <fullName>Cost</fullName>
                </value>
                <value>
                    <fullName>COM</fullName>
                </value>
                <value>
                    <fullName>COL</fullName>
                </value>
                <value>
                    <fullName>Freight Request</fullName>
                </value>
                <value>
                    <fullName>SM</fullName>
                </value>
                <value>
                    <fullName>POD</fullName>
                </value>
                <value>
                    <fullName>Expedite Domestic</fullName>
                </value>
                <value>
                    <fullName>Expedite International</fullName>
                </value>
                <value>
                    <fullName>Vendor Air Freight</fullName>
                </value>
                <value>
                    <fullName>DC Pickup</fullName>
                </value>
                <value>
                    <fullName>Budget</fullName>
                </value>
                <value>
                    <fullName>Yardage</fullName>
                </value>
                <value>
                    <fullName>Confirmed Quote</fullName>
                </value>
                <value>
                    <fullName>Model Room Sample</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Upholstery_Fee__c</fullName>
        <label>Upholstery Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Vendor_Request_Date__c</fullName>
        <inlineHelpText>Date Ops sent request to vendor</inlineHelpText>
        <label>Vendor Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vendor_Tracking__c</fullName>
        <label>Vendor Tracking #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Yardage_Square_Complete__c</fullName>
        <formula>NOT(ISBLANK(Yardage__c) ) &amp;&amp; NOT(ISBLANK( Square_Feet__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Yardage Square Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Yardage__c</fullName>
        <inlineHelpText>1 Yard of Fabric converts to 18 Sq Ft of leather</inlineHelpText>
        <label>Yardage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Operations Request Line Item</label>
    <nameField>
        <displayFormat>ORLI-{000000}</displayFormat>
        <label>Operations Request Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Operations Request Line Items</pluralLabel>
    <recordTypes>
        <fullName>COM_COL</fullName>
        <active>true</active>
        <label>COM/COL</label>
    </recordTypes>
    <recordTypes>
        <fullName>Custom_Product</fullName>
        <active>true</active>
        <label>Custom Product</label>
    </recordTypes>
    <recordTypes>
        <fullName>DC_Pickup</fullName>
        <active>true</active>
        <label>DC Pickup</label>
    </recordTypes>
    <recordTypes>
        <fullName>Freight_Request</fullName>
        <active>true</active>
        <label>Freight Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Inventory_Request</fullName>
        <active>true</active>
        <label>Inventory Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Margin_Request</fullName>
        <active>true</active>
        <label>Margin Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>POD</fullName>
        <active>true</active>
        <label>POD</label>
    </recordTypes>
    <recordTypes>
        <fullName>Product_Information</fullName>
        <active>true</active>
        <label>Product Information</label>
    </recordTypes>
    <recordTypes>
        <fullName>SKU_Setup</fullName>
        <active>true</active>
        <label>SKU Setup</label>
    </recordTypes>
    <recordTypes>
        <fullName>SPO_Quote</fullName>
        <active>true</active>
        <label>SPO Quote</label>
    </recordTypes>
    <recordTypes>
        <fullName>Side_Mark</fullName>
        <active>true</active>
        <label>Side Mark</label>
    </recordTypes>
    <recordTypes>
        <fullName>Spec_Sheet</fullName>
        <active>true</active>
        <label>Spec Sheet</label>
    </recordTypes>
    <recordTypes>
        <fullName>Swatches_Fabrics_Finishes</fullName>
        <active>true</active>
        <label>Swatches, Fabrics &amp; Finishes</label>
    </recordTypes>
    <recordTypes>
        <fullName>Vendor_Air_Freight</fullName>
        <active>true</active>
        <label>Vendor Air Freight</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Limit_Quantity</fullName>
        <active>true</active>
        <description>Limit Quantity to no more than 4 if Operations Request parent record has record type &quot;Swatches, Fabrics &amp; Finishes&quot;.</description>
        <errorConditionFormula>AND(
  Quantity__c &gt; 4,
  Operations_Request__r.RecordType.Name = &quot;Swatches, Fabrics &amp; Finishes&quot;
)</errorConditionFormula>
        <errorDisplayField>Quantity__c</errorDisplayField>
        <errorMessage>Quantity must be less than 5 when Operations Request record type is Swatches, Fabrics &amp; Finishes.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SKU_Setup_No_BOM_SKU</fullName>
        <active>true</active>
        <description>Do not allow a BOM Header SKU to be on the SKU Setup record type.</description>
        <errorConditionFormula>AND(
  OR(RecordType.Name = &quot;SKU Setup&quot;, RecordType.Name = &quot;COM/COL&quot;, RecordType.Name = &quot;SPO Quote&quot;, RecordType.Name = &quot;Custom Product&quot;),
  Product__r.BOM_Sku__c
)</errorConditionFormula>
        <errorDisplayField>Product__c</errorDisplayField>
        <errorMessage>BOM Header SKUs are not allowed. Please add one or more of the BOM Component SKUs instead.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Yardage_is_blank_if_Square_Feet_no_blank</fullName>
        <active>true</active>
        <description>This ensures that there is no value in Yardage if there is already a value in Square Fet</description>
        <errorConditionFormula>NOT(ISBLANK(Yardage__c) )  &amp;&amp;   NOT(ISBLANK( Square_Feet__c )) &amp;&amp;  Yardage_Square_Complete__c = False</errorConditionFormula>
        <errorDisplayField>Yardage__c</errorDisplayField>
        <errorMessage>Yardage cannot have a value if Square Feet is populated. One field auto-calculates off of the other so one of these fields must be blank upon save.</errorMessage>
    </validationRules>
</CustomObject>